--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "vuecrud",
-    "version": "0.2.132",
+    "name": "vuecrudLocal",
+    "version": "0.2.134",
     "private": true,
     "main": "dist/vuecrud.umd.js",
     "scripts": {
